--- a/projects/anyframe-util-system/.classpath
+++ b/projects/anyframe-util-system/.classpath
@@ -5,7 +5,7 @@
   <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/anyframe/anyframe-core/1.0.0/anyframe-core-1.0.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/anyframe/anyframe-core/1.0.0.RC1/anyframe-core-1.0.0.RC1.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-collections/commons-collections/3.2/commons-collections-3.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-compress/1.1/commons-compress-1.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/1.4/commons-io-1.4.jar"/>
