--- a/manual/.project
+++ b/manual/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>anyframe.plugin.util-system.manual</name>
+	<name>anyframe-util-system-manual</name>
 	<comment></comment>
 	<projects>
 	</projects>
