--- a/projects/anyframe-util-system/.settings/org.eclipse.jdt.core.prefs
+++ b/projects/anyframe-util-system/.settings/org.eclipse.jdt.core.prefs
@@ -1,18 +1,23 @@
-#Mon Jan 17 14:51:44 KST 2011
-eclipse.preferences.version=1
-encoding/=UTF-8
-encoding//src/main/java=UTF-8
-encoding//src/main/resources=UTF-8
+#Sun Mar 25 22:29:57 KST 2012
+org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
+encoding/src/test/java=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
-org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
-org.eclipse.jdt.core.compiler.compliance=1.5
-org.eclipse.jdt.core.compiler.debug.lineNumber=generate
+eclipse.preferences.version=1
+encoding/.=UTF-8
+encoding/src/test/resources=UTF-8
+encoding/src/main/resources=UTF-8
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
+encoding/src/main/java=UTF-8
+encoding//src/main/java=UTF-8
 org.eclipse.jdt.core.compiler.debug.sourceFile=generate
+encoding//src/main/resources=UTF-8
+org.eclipse.jdt.core.compiler.debug.lineNumber=generate
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
 org.eclipse.jdt.core.compiler.source=1.5
+encoding/=UTF-8
