--- a/projects/anyframe-util-system/pom.xml
+++ b/projects/anyframe-util-system/pom.xml
@@ -9,13 +9,13 @@
     <groupId>org.anyframe</groupId>
     <artifactId>anyframe-util-system</artifactId>
     <packaging>jar</packaging>
-    <version>1.5.0</version>
-    <name>anyframe-util-system</name> 
+    <version>1.5.0.RC1</version>
+    <name>anyframe-util-system</name>
 	<dependencies>
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-core</artifactId>
-			<version>1.5.0</version>
+			<version>1.5.0.RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
@@ -57,36 +57,39 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
+			<version>1.2.15</version>
+			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-		</dependency> 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-		</dependency> 		
+		</dependency>
+ 
 		<dependency>
 			<groupId>org.hyperic</groupId>
 			<artifactId>sigar</artifactId>
 			<version>1.6.4</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>1.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.4</version>
 		</dependency>
+
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 </project>
