--- a/manual/build.xml
+++ b/manual/build.xml
@@ -21,7 +21,7 @@
 	<property name="result.dir" value="E:/Repo/anyframe-opensource/docs/anyframe/plugin/${plugin.type}"/>
 
 	<property name="book.name" value="util-system" />
-	<property name="version" value="1.5.0.RC1"/>
+	<property name="version" value="1.5.1"/>
  	<property name="service.name" value="anyframe-util-system" />
 	
 	<property name="sample.home" value="E:/workspace/sample/${book.name}/${version}" />
