--- a/projects/anyframe-util-system-pi/pom.xml
+++ b/projects/anyframe-util-system-pi/pom.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>org.anyframe.plugin</groupId>
 	<artifactId>anyframe-util-system-pi</artifactId>
-	<version>1.5.0.RC1</version>
+	<version>1.5.1</version>
 	<packaging>war</packaging>
 	<name>util-system</name>
+	
 	<dependencies>
 		<!-- dependencies for util system plugin START -->
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-chart</artifactId>
-			<version>1.0.3.RC1</version>
+			<version>1.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-util-system</artifactId>
-			<version>1.5.0.RC1</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -56,7 +60,6 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- dependencies for util system plugin END -->
-
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
@@ -80,7 +83,7 @@
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-core</artifactId>
-			<version>1.5.0.RC1</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -208,11 +211,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-asm</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
@@ -229,7 +227,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
+			<version>1.2.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -244,7 +242,7 @@
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-chart</artifactId>
-			<version>1.0.3.RC1</version>
+			<version>1.0.4</version>
 		</dependency>
 
 		<!-- jaxb marshalling -->
@@ -256,7 +254,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
-			<version>3.1.1.RELEASE</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -266,7 +264,7 @@
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 			<artifactId>jaxb-impl</artifactId>
-			<version>2.2.4-1</version>
+			<version>2.2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
@@ -276,7 +274,7 @@
 	</dependencies>
 	<properties>
 		<inspection.dir>${user.home}/.anyframe/inspection</inspection.dir>
-		<spring.version>3.1.1.RELEASE</spring.version>
+		<spring.version>3.2.2.RELEASE</spring.version>
 		<targetJdk>1.5</targetJdk>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -285,6 +283,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
@@ -297,6 +296,7 @@
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.26</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -306,6 +306,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.8</version>
 				<configuration>
 					<ajdtVersion>none</ajdtVersion>
 				</configuration>
@@ -313,7 +314,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>anyframe-maven-plugin</artifactId>
-				<version>2.2.1.RC1</version>
+				<version>2.2.2</version>
 				<dependencies>
 					<dependency>
 						<groupId>hsqldb</groupId>
