--- a/projects/anyframe-util-system-pi/.settings/org.eclipse.jdt.core.prefs
+++ b/projects/anyframe-util-system-pi/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,9 @@
-#Wed Apr 06 16:42:23 KST 2011
+#Wed Jan 29 16:34:12 KST 2014
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
+org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
-org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.source=1.6
