--- a/projects/anyframe-util-system-pi/pom.xml
+++ b/projects/anyframe-util-system-pi/pom.xml
@@ -7,7 +7,7 @@
 	
 	<groupId>org.anyframe.plugin</groupId>
 	<artifactId>anyframe-util-system-pi</artifactId>
-	<version>1.6.0</version>
+	<version>1.6.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>util-system</name>
 	
@@ -16,12 +16,12 @@
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-chart</artifactId>
-			<version>1.1.0</version>
+			<version>1.1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-util-system</artifactId>
-			<version>1.6.0</version>
+			<version>1.6.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -83,7 +83,7 @@
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-core</artifactId>
-			<version>1.6.0</version>
+			<version>1.6.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -244,6 +244,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.6.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.anyframe</groupId>
+			<artifactId>anyframe-chart</artifactId>
+			<version>1.1.1-SNAPSHOT</version>
+		</dependency>
 
 		<!-- jaxb marshalling -->
 		<dependency>
@@ -320,7 +325,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>anyframe-maven-plugin</artifactId>
-				<version>2.3.0</version>
+				<version>2.3.1-SNAPSHOT</version>
 				<dependencies>
 					<dependency>
 						<groupId>hsqldb</groupId>
