--- a/projects/anyframe-util-system/pom.xml
+++ b/projects/anyframe-util-system/pom.xml
@@ -4,18 +4,18 @@
 	<parent>
 		<groupId>org.anyframe</groupId>
 		<artifactId>anyframe-plugin-parent</artifactId>
-		<version>5.3.0</version>
+		<version>5.3.1-SNAPSHOT</version>
 	</parent>
     <groupId>org.anyframe</groupId>
     <artifactId>anyframe-util-system</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.0</version>
+    <version>1.6.1-SNAPSHOT</version>
     <name>anyframe-util-system</name> 
 	<dependencies>
 		<dependency>
 			<groupId>org.anyframe</groupId>
 			<artifactId>anyframe-core</artifactId>
-			<version>1.6.0</version>
+			<version>1.6.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
